<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:background="@color/green"
        android:padding="5dp"
        android:text="@string/app_name"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/description"/>
    <ImageButton
        android:id="@+id/share_app"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:src="@drawable/share"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:background="@color/green"
        android:padding="5dp"
        android:text="@string/about_dev"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/about_dev_desc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/facebook" />
        <ImageButton
            android:id="@+id/website"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/website" />
    </LinearLayout>
</LinearLayout>