<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/personal_contact_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:background="@color/green"
            android:padding="5dp"
            android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:src="@drawable/person_icon"/>
        <EditText
            android:id="@+id/personal_contact_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:padding="10dp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@drawable/phone_icon"/>
            <EditText
                android:id="@+id/personal_contact_phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="phone"
                android:hint="@string/phone"
                android:padding="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@drawable/email_icon"/>
            <EditText
                android:id="@+id/personal_contact_email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:padding="10dp"/>
        </LinearLayout>
    <Button
        android:id="@+id/personal_contact_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="end"
        android:text="@string/save"
        />
</LinearLayout>